name:              whosawthatcoming
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://whosawthatcoming.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Home

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

executable         whosawthatcoming
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.1        && < 1.3
                 , yesod-core                    >= 1.1        && < 1.3
                 , yesod-auth                    >= 1.1        && < 1.4
                 , yesod-static                  >= 1.1        && < 1.3
                 , yesod-default                 >= 1.1        && < 1.3
                 , yesod-form                    >= 1.1        && < 1.4
                 , yesod-test                    >= 0.3        && < 1.3
                 , clientsession                 >= 0.8        && < 0.10
                 , bytestring                    >= 0.9
                 , text                          >= 0.11       && < 1.2
                 , persistent                    >= 1.0        && < 1.4
                 , persistent-postgresql         >= 1.0        && < 1.4
                 , template-haskell
                 , shakespeare
                 , hamlet                        >= 1.1        && < 1.3
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , hjsmin
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 2.2
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.5.0.2    && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 1.3        && < 2.2

                 , yesod-test
                 , random
                 , transformers
                 , time
                 , cryptohash
                 , conduit
                 , data-default
                 , monad-logger
test-suite integration-tests
    type: exitcode-stdio-1.0
    main-is:        main.hs
    hs-source-dirs: tests .
    ghc-options:     -Wall
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: base                          >= 4          && < 5
                 , yesod-test                    >= 0.1        && < 0.2
