name:              whosawthatcoming
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
category:          Web
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://www.whosawthatcoming.com/

library
    exposed-modules: Application
                     Settings
    other-modules:   Foundation
                     Import
                     Model
                     Settings.StaticFiles
                     Handler.Home

    ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-default
                 , yesod-form
                 , yesod-test
                 , clientsession
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , aeson
                 , http-conduit
                 , http-client-tls
                 , directory
                 , warp

                 , yesod-test
                 , random
                 , transformers
                 , time
                 , cryptohash
                 , conduit
                 , data-default
                 , monad-logger

executable         whosawthatcoming
    ghc-options:   -Wall -threaded -O2

    main-is:       main.hs
    hs-source-dirs: app

    build-depends: base
                 , yesod
                 , whosawthatcoming
